<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/action_list_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_make"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/action_make_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_manage"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/action_manage_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_schedule"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/action_schedule_title"
        app:showAsAction="always" />

</menu>