<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/all_listView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/make_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name_text_main" />

            <EditText
                android:id="@+id/restaurant_editText_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/restaurant_editText_text_main"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/max_number_text" />

            <EditText
                android:id="@+id/maxNumber_editText_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/maxNumber_editText_text_main"
                android:inputType="number"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/explanation_text_main"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/explanation_editText_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/explanation_editText_text_main"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <Button
                android:id="@+id/submitBtn_main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit_text_main"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/aply_listView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/mySchedule_listView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:visibility="gone" />
</LinearLayout>