<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/userName_text_applyListItem"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_border"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sample_user_name_text"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName_text_applyListItem"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/acceptBtn_applyListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/acceptBtn_text"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/rejectBtn_applyListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/rejectBtn_text"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>
