<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_email_gray_24dp" />

            <EditText
                android:id="@+id/emailEditText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColorHint="@color/colorGray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_email_gray_24dp" />

            <EditText
                android:id="@+id/nameEditText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/name_hint_text"
                android:inputType="text"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColorHint="@color/colorGray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_vpn_key_gray_24dp" />

            <EditText
                android:id="@+id/passwordEditText_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColorHint="@color/colorGray" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/submitButton_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"
                android:text="@string/register_text"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>